# rp2040-usb-sound-card

./: Cargo.toml  openocd.cfg  openocd.gdb
.cargo/: config
src/: audio_buffer.rs  i2s_master.rs  main.rs  usb.rs  usb_audio.rs
